changes to index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <h2>Explore Together</h2>
                 </div>
                 <div class="hero__img-container">
-                    <img class="hero__img" src="./images/samuel-zeller-removebg.png" alt="transparent-balls">
+                    <!-- <img class="hero__img" src="./images/samuel-zeller-removebg.png" alt="transparent-balls"> -->
                 </div>
             </section>
 
@@ -51,32 +51,20 @@
                     <div class="intro__item intro__image intro__image--one">
                         <img src="./images/scott-webb-102825.jpg" alt="picture of museum">
                     </div>
-                    <div class="intro__item intro__image intro__image--two">
-                        <img src="./images/devin-h-_resized.jpg" alt="picture of a tree">
-                    </div>
                     <div class="intro__item intro__image intro__image--three">
                         <img src="./images/museum-people_resized.jpg" alt="picture inside museum ">
                     </div>
                     <div class="intro__item intro__text intro__text--two ">
                         <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself.</p>
                     </div>
-                    <div class="intro__item intro__image intro__image--six">
-                        <img src="./images/kafai-liu_resized.jpg" alt="picture of a dinosaur">
-                    </div>
                     <div class="intro__item intro__image intro__image--four">
                         <img src="./images/anirudh-YQYacLW8o2U-unsplash_resized.jpg" alt="picture of DNA">
-                    </div>
-                    <div class="intro__item intro__image intro__image--five">
-                        <img src="./images/nick-fewings-_resized.jpg" alt="picture of the mooon">
-                    </div>
-                    <div class="intro__item intro__text intro__text--three ">
-                        <p>The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
                     </div>
                     <div class="intro__item intro__image intro__image--seven">
                         <img src="./images/klaudia-piaskowska_resized.jpg" alt="picture of exhibition">
                     </div>
-                    <div class="intro__item intro__image intro__image--eight">
-                        <img src="./images/valentin-petkov_resized.jpg" alt="picture of salamander">
+                    <div class="intro__item intro__text intro__text--three ">
+                        <p>The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
                     </div>
                     <div class="intro__item intro__image intro__image--nine">
                         <img src="./images/david-barajas-q__resized.jpg" alt="picture of museum maker wall">
@@ -84,15 +72,27 @@
                     <div class="intro__item intro__text intro__text--four ">
                         <p>We believe science should not be confined to the textbook, but brought to live through exhibits.</p>
                     </div>
+                    <!-- <div class="intro__item intro__image intro__image--two">
+                        <img src="./images/devin-h-_resized.jpg" alt="picture of a tree">
+                    </div>  -->
+                    <div class="intro__item intro__image intro__image--six">
+                        <img src="./images/kafai-liu_resized.jpg" alt="picture of a dinosaur">
+                    </div> 
+                    <div class="intro__item intro__image intro__image--five">
+                        <img src="./images/nick-fewings-_resized.jpg" alt="picture of the mooon">
+                    </div>
+                    <!-- <div class="intro__item intro__image intro__image--eight">
+                        <img src="./images/valentin-petkov_resized.jpg" alt="picture of salamander">
+                    </div> -->
+                    <div class="intro__item intro__image intro__image--ten">
+                        <img src="./images/shutterstock_259843295.webp" alt="picture of museum store wall">
+                    </div>
                     <div class="intro__item intro__text intro__text--five ">
                         <p>This is why we have over 1000 different exhibits on the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).</p>
                     </div>
-                    <div class="intro__item intro__image intro__image--ten">
-                        <img src="./images/david-chuan-en-lin-resized.jpg" alt="picture of museum store wall">
-                    </div>
-                    <div class="intro__item intro__image intro__image--eleven">
+                    <!-- <div class="intro__item intro__image intro__image--eleven">
                         <img src="./images/raphael-wild-xP-nzRiTQvQ-unsplash_resized.jpg" alt="picture of trex mouth">
-                    </div>
+                    </div> -->
                 </div>
             </section>
 
