--- a/explore.html
+++ b/explore.html
@@ -20,8 +20,10 @@
     <header>
         <div class="navbar__container">
             <nav class="navbar__menu">
-                <a class="navbar__menu__branding" href=""><img src="" alt=""></a>
                 <ul class="navbar__menu__ul">
+                    <a class="navbar__menu__branding" href="./index.html">
+                        <img class="navbar__menu__branding--img" src="./images/png2/logo-no-background.png" alt="navbar brand">
+                    </a>
                     <a href="./index.html"><li>Home</li></a>
                     <a href="./explore.html"><li>Explore</li></a>
                     <a href="./exhibitions.html"><li>Exhibition</li></a>
@@ -38,6 +40,9 @@
     </header>
     <main>
         <section class="title__section">
+            <div class="title__logo">
+                <img class="title__logo--img" src="./images/png2/logo-no-background.png" alt="">
+            </div>
             <div class="title__image__container title__image__container--explore"></div>
             <div class="title__h1__container">
                 <h1>Explore</h1>
@@ -62,6 +67,15 @@
                                 <div class="internal-gallery__child gallery__child--six"><img src="./images/name_-gravity-_AdUs32i0jc-unsplash.jpg" alt="Picture-of-mammoth"></div>
                             </div>
                         </div>
+                        <span class="overlay__text overlay__text--kids">
+                            <p>
+                                We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and experiment with our team of experts.
+                            </p>
+                            <p>
+                                During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, send us a message.
+
+                            </p>
+                        </span>
                         <span class="overlay__CTA">
                             <p>Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.</p>
                             <button class="CTA__button" onclick="changeStyleKids()">Learn More</button>
