--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <header>
         <div class="navbar__container">
             <nav class="navbar__menu">
-                <a class="navbar__menu__branding" href=""><img src="" alt=""></a>
                 <ul class="navbar__menu__ul">
+                    <a class="navbar__menu__branding" href="./index.html">
+                        <img class="navbar__menu__branding--img" src="./images/png2/logo-no-background.png" alt="navbar brand">
+                    </a>
                     <a href="./index.html"><li>Home</li></a>
                     <a href="./explore.html"><li>Explore</li></a>
                     <a href="./exhibitions.html"><li>Exhibition</li></a>
@@ -36,16 +38,17 @@
         <section class="homepage__section homepage__section--wrap-inner">
             <section class="hero__section">
                 <div class="hero__text">
-                    <h1>Community Science Museum</h1>
-                    <h2>Explore Together</h2>
-                </div>
+                    <h1>Join us and lets</h1>
+                    <h2>Explore</h2>
+                    <h2>The World</h2>
+                </div> 
                 <div class="hero__img-container">
-                    <!-- <img class="hero__img" src="./images/samuel-zeller-removebg.png" alt="transparent-balls"> -->
+                    <img class="hero__img" src="./images/png4/logo-no-background.png" alt="">
                 </div>
             </section>
 
               <section class="intro__section">
-                 <div class="intro__container intro__container--fadein"> 
+                 <div class="intro__container"> 
                     <div class="intro__item intro__text intro__text--one">
                         <p class="">Come join us at the Community Science Museum where we're committed to making science accessible to all.</p>
                     </div>
