--- a/explore.html
+++ b/explore.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon-16x16.png">
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- LINK FOR MAIN STYLING -->
@@ -50,7 +51,7 @@
         </section>
         <section class="gallery__section gallery__section--explore">
             <div class="gallery__card gallery__card--kids" id = "gallery__card--kids">
-                <img src="./images/learn-2405206_1920.jpg" alt="Picture-of-kid">
+                <img src="./images/markus-spiske-197281.jpg" alt="Picture-of-kid">
                 <div class="gallery__overlay">
                     <div class="overlay__details overlay__details--kids">
                         <h2 class="overlay__title">For Kids</h2>
@@ -89,8 +90,8 @@
                     <div class="overlay__details overlay__details--teachers">
                         <h2 class="overlay__title">Teachers</h2>
                         <span class="overlay__text overlay__text--teachers">
-                            <p>Explore the wonders of our cosmos. Our fantastic exhibition, 'The Sky Above Us', explores the night sky and what we can see and know about the universe around us. We'll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the stars to travel by.</p>
-                            <p>Follow the journey of our solar exploration: from early Arab traders, to Galileo's telescope, to the latest exploration of the planets in our solar system.</p> 
+                            <p>As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.</p>
+                            <p>Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
                         </span>
                         <span class="overlay__CTA">
                             <button class="CTA__button" onclick="changeStyleTeachers()">Learn More</button>
