--- a/special-events.html
+++ b/special-events.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="special events">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="special events page">
     <title>Special Events</title>
     <script defer src="script.js"></script>
+    <link rel="icon" type="image/x-icon" href="./images/favicon-16x16.png">
     <!-- LINK FOR MAIN STYLING -->
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/navbar.css">
